@@ -1,3 +1,9 @@
+2002-03-12  Andreas Schwab  <schwab@suse.de>
+
+	* config/tc-ia64.c (fixup_unw_records): Clear region when seeing a
+	body record so that an error is given for misplaced .save
+	pseudo-ops.
+
 2002-03-09  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/tc-i386.h (REX_OPCODE): Define.
